maybe this helps
aaaaaaaaaaaa idk

--- a/niceRatBro.html
+++ b/niceRatBro.html
@@ -1,4 +1,4 @@
- <title>Nice rat bro</title>
+ <title>Nice rodent bro</title>
  <link rel="icon" type="image/png" sizes="96x96" href="niceRatBro.jpg" />
 
 <style>
@@ -24,38 +24,38 @@ font-family:Ambitsek;
 
 </style>
 
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
-<p>Nice rat bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
+<p>Nice rodent bro B)</p>
